--- a/GESPRG_practicumdocument.tex
+++ b/GESPRG_practicumdocument.tex
@@ -6,7 +6,7 @@
 
 \documentclass[a4paper,10pt,fleqn,twoside]{article}
 
-\def\version{1.99}
+\def\version{1.999$\beta$}
 
 \usepackage{parskip}
 \usepackage[dutch]{babel}
@@ -58,7 +58,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage{nimbusmono}
 \usepackage[scaled]{helvet}
-\usepackage[bitstream-charter]{mathdesign}
+\let\oldhrulefill\hrulefill
+\usepackage[charter]{mathdesign}
+\let\hrulefill\oldhrulefill
 \fi
 
 \usepackage[stretch=10]{microtype}
@@ -198,6 +200,8 @@
     {\}}{{\CodeSymbol{\}}}}1
     {(}{{\CodeSymbol{(}}}1
     {)}{{\CodeSymbol{)}}}1
+    {[}{{\CodeSymbol{[}}}1
+    {]}{{\CodeSymbol{]}}}1
     {>}{{\CodeSymbol{$>$}}}1
     {<}{{\CodeSymbol{$<$}}}1
     {=}{{\CodeSymbol{$=$}}}1
@@ -225,6 +229,14 @@
 	pdfdisplaydoctitle=true,
 }
 \urlstyle{sf}%
+
+%% Make a nice \thepage at the outer margin
+%\makeatletter
+%\newlength{\page@number@width}
+%\settowidth{\page@number@width}{\thepage}
+%\addtolength{\page@number@width}{6mm}
+%\newcommand{\pagenumberbox}{\colorbox{thuasgreen}{\makebox[\page@number@width][c]{\color{white}\textbf{\vphantom{2}\thepage}}}}
+%\makeatother
 
 \newcommand{\letop}{%
 \vspace*{2ex}
@@ -258,6 +270,18 @@ splittopskip = \topskip,%
 \Large\leftpointright & LEES DE VOETNOOT AAN HET EINDE VAN DIT HOOFDSTUK!.
 \end{tabularx}
 \end{mdframed}
+}
+
+
+\newcommand\unitsize{0.80}
+\tikzset{memloc/.style={rectangle,draw=black, thick, minimum size=\unitsize cm}}
+\tikzset{arraypic/.style={font=\ttfamily,scale=\unitsize}}
+\tikzset{
+	memlocnull/.pic={
+	\node[memloc] {};
+	\draw[thick] (-0.5*\unitsize,-0.5*\unitsize) -- (0.5*\unitsize,0.5*\unitsize);
+	\draw[thick] (-0.5*\unitsize,0.5*\unitsize) -- (0.5*\unitsize,-0.5*\unitsize);
+	}
 }
 
 
@@ -545,7 +569,7 @@ splittopskip = \topskip,%
 
 \tableofcontents
 \vfill
-Dit document is gemaakt door F. Theinert, W. Muhammad, B. Kuiper, M. Schrauwen en J. op den Brouw.
+Dit document is gemaakt door F. Theinert, W. Muhammad, B. Kuiper, M. Schrauwen, H. Broeders en J. op den Brouw.
 Opmerkingen en suggesties kunnen worden gemaild naar \href{mailto:J.E.J.opdenBrouw@hhs.nl}{J.E.J.opdenBrouw@hhs.nl}
 
 
@@ -2309,7 +2333,10 @@ A(m-1, A(m, n-1)) & \mbox{if } m > 0 \mbox{ and } n > 0.
 
 Schrijf een programma dat de getallen $m$ en $n$, beide geheel een groter dan of gelijk aan nul, inleest en met behulp van een functie de Ackermann-functie berekent en afdrukt met behulp van de bovenstaande recursieve identiteit.
 
+\subsection{Aantal delers van een geheel getal}
+In de getaltheorie komt een bepaalde klasse van getallen voor met de eigenschap dat zo'n getal alleen deelbaar is 1 en zichzelf. We noemen zo'n getal een \textsl{priemgetal}. Priemgetallen spelen een belangrijke rol bij encryptie.
 
+Schrijf een functie \lstinline|int aantal_delers(int getal)| die van het opgegeven getal het aantal delers bepaalt. Merk op dat 1 ook een deler is. Het getal moet groter zijn dan 1. Schrijf een hoofdprogramma dat de gebruiker vraagt een getal in te voeren (netjes een melding geven wat er gevraagd wordt en testen of het getal groter is dan 1) en het aantal delers afdrukt m.b.v.\@ de functie \lstinline|aantal_delers|.
 
 
 \section{Pointers en array's}
@@ -2318,7 +2345,7 @@ Schrijf een programma dat de getallen $m$ en $n$, beide geheel een groter dan of
 \label{sec:inleidingpointers}
 In de les heb je het één en ander geleerd over pointers en array’s. Een pointer is een variabele die als inhoud een adres bevat. Dit adres is dan het adres waar een andere variabele ligt opgeslagen. Zodoende wijst de pointer dus naar de variabele.
 
-Een array is een lijst van variabelen van het zelfde type. Je kan een array indexeren. Dat houdt in dat je een \textsl{element} uit de lijst kan gebruiken in je bewerkingen. Hiervoor gebruik je blokhaken.
+Een array is een lijst van variabelen van het zelfde type. Je kan een array indexeren. Dat houdt in dat je een \textsl{element} uit de lijst kan gebruiken in je bewerkingen. Hiervoor gebruik je blokhaken. Een korte introductie over array's en pointers is te vinden in bijlage~\ref{sec:arypoin}.
 
 Hieronder is een programma dat een aantal waarden inleest in een array en vervolgens het gemiddelde van deze waarden afdrukt (het is in dit geval eigenlijk niet nodig om de getallen in en array op te slaan). Maak een project aan en plaats daarin de onderstaande code. Laat zien dat het werkt.
 
@@ -2974,5 +3001,288 @@ int main(void) {
 \end{lstlisting}
 
 
+\section{Introductie array's en pointers}
+\label{sec:arypoin}
+Soms is het gebruik van elementaire datatypen niet handig bij het ontwerpen van een programma. We nemen als voorbeeld een programma dat vijf getallen inleest en het gemiddelde van deze getallen afdrukt. We gebruiken vijf integer variabelen voor de in te voeren getallen en een integer variabele voor het berekenen van het gemiddelde:
+
+\begin{lstlisting}
+#include <stdio.h>
+
+int main(void) {
+
+	int a, b, c, d, e;
+	printf("Geef getal: ");
+	scanf("%d", &a);
+	printf("Geef getal: ");
+	scanf("%d", &b);
+	printf("Geef getal: ");
+	scanf("%d", &c);
+	printf("Geef getal: ");
+	scanf("%d", &d);
+	printf("Geef getal: ");
+	scanf("%d", &e);
+
+	gem = (a+b+c+d+e)/5;
+
+	printf("Gemiddelde is: %d\n",gem);
+	return 0;
+}
+\end{lstlisting}
+
+We kunnen hierbij twee opmerkingen plaatsen. De code voor het inlezen van de vijf getallen lijkt sterk op elkaar. Het programma wordt onpraktisch als we het gemiddelde van 100 getallen willen berekenen.
+
+\subsection{Array's}
+We kunnen bij het ontwerpen van het programma gebruik maken van \textsl{array's}. Een array wordt een \textsl{samengesteld datatype} genoemd. Hieronder volgt de declaratie van een array van twaalf integers:
+
+\begin{lstlisting}
+int a[12];
+\end{lstlisting}
+
+Hierin is \verb|a| de naam van de array en 12 het aantal \textsl{elementen} van de array. Dit wordt de lengte van de array genoemd. De inhoud van de afzonderlijke elementen is niet gedefinieerd (behalve als de array globaal wordt gedeclareerd, dan is de inhoud 0).  Een array is uit te beelden als een rechthoek met hokjes zoals hieronder is te zien.
+
+\begin{figure}[!ht]
+\centering
+\begin{tikzpicture}[arraypic]
+\foreach \y [count=\x from 0] in {9,5,13,19,12,8,7,4,21,2,6,3}{ 
+    \node[memloc] at (\x,0){}; \node at (\x,0.75) {\small \x}; }
+
+\node at (-1.0,0) [left] {a:};
+\draw[decorate,decoration={brace,mirror},thick] (-.5,-.7) -- node[below,yshift=-2mm]{\rmfamily array length} (11.5,-.7);
+\end{tikzpicture}
+\end{figure}
+
+Te zien is dat de array begint bij element 0 en eindigt bij element 11. In C begint een array altijd bij element~0. Het laatste of hoogste element is één minder dan de lengte van de array. In het voorbeeld is het laatste element dus 11.
+
+%\begin{figure}[H]
+%\centering
+%\begin{tikzpicture}[arraypic]
+%\foreach \y [count=\x from 0] in {9,5,13,19,12,8,7,4,21,2,6,3}{ 
+%    \node[memloc] at (\x,0){\y}; \node at (\x,0.75) {\small \x}; }
+%
+%\node at (-1.0,0) [left] {a:};
+%
+%\draw[decorate,decoration={brace,mirror},thick] (-.5,-.7) -- node[below,yshift=-2mm]{\rmfamily array length} (11.5,-.7);
+%\end{tikzpicture}
+%\end{figure}
+
+We kunnen de inhoud van een array tijdens runtime specificeren met een zogenoemde \textsl{array initializers}. Bij een volledige lijst met initializers mag de lengte weggelaten worden. Een voorbeeld:
+
+\begin{lstlisting}
+int a[] = {9,5,13,19,12,8,7,4,21,2,6,3};
+\end{lstlisting}
+
+De lengte van de array komt overeen met het aantal initializers. Om een array met nullen te initialiseren, kunnen we gebruik maken van een gedeeltelijke initialisatie:
+
+\begin{lstlisting}
+int a[12] = { 0 };
+\end{lstlisting}
+
+Element 0 wordt expliciet met 0 geïnitialiseerd. De overige elementen worden, conform de C-standaard, altijd met 0 geïnitialiseerd, ook als de eerste initializer ongelijk aan 0 is.
+
+
+ Om een element uit een array te gebruiken, moeten de naam van de array en het elementnummer (tussen blokhaken) worden opgegeven. Het onderstaande voorbeeld kopieert element 3 uit de array in variabele \lstinline|getal|:
+
+\begin{lstlisting}
+int a[] = {9,5,13,19,12,8,7,4,21,2,6,3};
+int getal:
+
+getal = a[3];
+\end{lstlisting}
+
+In de onderstaande figuur is de werking van het programma uitgebeeld.
+
+\begin{figure}[!ht]
+\centering
+\begin{tikzpicture}[arraypic]
+\foreach \y [count=\x from 0] in {9,5,13,19,12,8,7,4,21,2,6,3}{ 
+    \node[memloc] at (\x,0){\y};  }
+
+\node at (-1.0,0) [left] {a:};
+
+\draw[-latex,thick] (3,1.2) --  node[above,yshift=2mm]{a[3]} (3,.6);
+\draw[-latex,thick,] { (3,-0.35)  .. controls (3,-1) and (2,-1.5) .. (0.5,-1.5) };
+\draw[thick] (3,0) circle (0.35cm);
+\node[memloc] at (0,-1.5) {19};
+\node at (-1.0,-1.5) [left] {getal:};
+\end{tikzpicture}
+\end{figure}
+
+Met behulp van een array is het makkelijk om de som te bepalen van een groot aantal getallen:
+
+\begin{lstlisting}
+	...
+	int a[] = {9,5,13,19,12,8,7,4,21,2,6,3};
+	int som = 0:
+	...
+	for (i=0; i<12; i=i+1) {
+		som = som + a[i];
+	}
+	...
+\end{lstlisting}
+
+De lengte (of grootte) van een array is te bepalen met behulp van de keyword \lstinline|sizeof|. Let daarbij op dat \lstinline|sizeof| de grootte in \textsl{bytes} berekend. Om het aantal elementen van de array te bepalen, moet de grootte in bytes nog worden gedeeld door de grootte van één element:
+
+\begin{lstlisting}
+array_size = sizeof a / sizeof a[0];
+\end{lstlisting}
+
+\subsection{Strings}
+Een string in C is niets anders dan een array van \lstinline|char|'s, afgesloten met een zogenoemde \textsl{null-byte} (\lstinline|\0|). Zo maakt de onderstaande declaratie de array \lstinline|str| aan met een grootte van 6.
+
+\begin{lstlisting}
+char str[] = "Hallo";
+\end{lstlisting}
+
+Dit is equivalent met:
+
+\begin{lstlisting}
+char str[] = { 'H', 'a', 'l', 'l', 'o', '\0'};
+\end{lstlisting}
+
+Een uitbeelding van de string is hieronder te zien:
+
+\begin{figure}[!ht]
+\centering
+\begin{tikzpicture}[arraypic]
+\foreach \y [count=\x from 0] in {H,a,l,l,o,\textbackslash0}{\node[memloc] at (\x,-2){\strut\y};}
+\node at (-1.0,-2) [left] {str:};
+\end{tikzpicture}
+\end{figure}
+
+Let erop dat de array dus één element groter is dan het aantal karakters in de array. Dit is een veel gemaakte fout bij het afhandelen van strings (een zogenoemde \textsl{off-by-one error}). Omdat het null-byte het einde van de string aangeeft, kunnen we er gebruik van maken, bijvoorbeeld voor het bepalen van de lengte van de string:
+
+\begin{lstlisting}
+	int count = 0;
+
+    while (str[count] != '\0') {
+        count++;
+    }
+
+	/* count holds length of string */
+\end{lstlisting}
+
+%%\begin{lstlisting}
+%%int strlen(char s[]) {
+%%    int count = 0;
+%%
+%%    while (s[count] != '\0') {
+%%        count++;
+%%    }
+%%    return count;
+%%}
+%%\end{lstlisting}
+
+\subsection{Pointers}
+Een \textsl{pointer} is een variabele waarvan de inhoud het \textsl{adres} is van een (andere) variabele in het computergeheugen. Hieronder is te zien dat de pointer \lstinline|pa| wijst naar de variabele \lstinline|a|.
+
+\begin{figure}[!ht]
+\centering
+\begin{tikzpicture}[arraypic]
+\node at (-3.5,0) [left] {pa:};
+\node[memloc] at (-2.5,0) {};
+\draw[-latex,thick,shorten >= 1pt] (-2.5,0) -- (-0.5,0.0);
+\fill (-2.5,0) circle (2pt);
+\node[memloc] at (0,0) {3};
+\node at (1,0) {a:};
+%\draw (0,0) pic {memlocnull};
+\end{tikzpicture}
+\end{figure}
+
+We kunnen dit als volgt in code programmeren:
+
+\begin{lstlisting}
+int a;     /* an integer */
+int *pa;   /* a pointer to an integer */
+
+a = 3;     /* set integer a to 3 */
+pa = &a;   /* let pa point to a */
+\end{lstlisting}
+
+We kunnen nu door middel van de pointer een variabele aanpassen:
+
+\begin{lstlisting}
+a = a + 1;     /* increment integer variabele a with 1 */
+*pa = *pa + 1; /* increment variabele through pointer */
+a = *pa + 1;   /* also works */
+*pa = a + 1;   /* also works */
+\end{lstlisting}
+
+Array's en pointers hebben een sterke relatie. De \textsl{naam van een array} is een \textsl{synoniem} van een pointer naar het eerste element van een array:
+
+\begin{lstlisting}
+int a[12] = {9,5,13,19,12,8,7,4,21,2,6,3};
+int *pa;
+
+pa = a; /* of: pa = &a[0]; */
+\end{lstlisting}
+
+\begin{figure}[!ht]
+\centering
+\begin{tikzpicture}[arraypic]
+\foreach \y [count=\x from 0] in {9,5,13,19,12,8,7,4,21,2,6,3} { \node[memloc] at (\x,0) {\y}; }
+
+\node at (-1.0,0) [left] {a:};
+
+\node[memloc] at (0,2.5){};
+\draw[-latex,thick,shorten >= 1pt] (0,2.5) -- (0,0.5);
+\node at (-1.0,2.5) [left] {pa:};
+\fill (0,2.5) circle (2pt);
+\end{tikzpicture}
+\end{figure}
+
+Pointers kunnen worden aangepast. De naam van een array kan \textsl{niet} worden aangepast. We demonstreren dit aan de hand van twee strings in het computergeheugen. De pointer \lstinline|pstr| wijst naar een string in het geheugen. De identifier \lstinline|str| is de naam van een array.
+
+\begin{figure}[!ht]
+\centering
+\begin{tikzpicture}[arraypic]
+\foreach \y [count=\x from 0] in {H,e,l,l,o,\textbackslash 0}{\node[memloc] at (\x,0){\strut\y};}
+\node[memloc] at (-2.5,0) {};
+\node at (-3.5,0) [left] {pstr:};
+\draw[-latex,thick,shorten >= 1pt] (-2.5,0) -- (-0.5,0.0);
+\fill (-2.5,0) circle (2pt);
+\foreach \y [count=\x from 0] in {W,o,r,l,d,\textbackslash0}{\node[memloc] at (\x,-2){\strut\y};}
+\node at (-1.0,-2) [left] {str:};
+\end{tikzpicture}
+\end{figure}
+
+ We kunnen \lstinline|pstr| dus wel aanpassen en \lstinline|str| niet:
+
+\begin{lstlisting}
+char *pstr = "Hello";  /* pstr: pointer to first address of array */
+char str[] = "World";  /* str: alias for first address or array */
+
+pstr = str; /* pstr points to first address of str */
+str = pstr; /* ILLEGAL: str cannot be assigned! */
+\end{lstlisting}
+
+Een speciaal geval van een pointer-adres is de zogenoemde NULL-pointer. De inhoud van de pointer is dan 0. In principe is er geen verschil met elke andere inhoud van de pointer, maar een NULL-pointer wordt gebruikt om aan te geven dat een pointer nergens naartoe wijst.
+
+\begin{lstlisting}
+/* #define NULL ((void*)0) */
+
+char *p = NULL;
+\end{lstlisting}
+
+Een NULL-pointer wordt als volgt weergegeven:
+
+\begin{figure}[!ht]
+\centering
+\begin{tikzpicture}[arraypic]
+\node at (-3.5,0) [left] {p:};
+\node[memloc] at (-2.5,0) {};
+\draw[-latex,thick,shorten >= 1pt] (-2.5,0) -- (-0.5,0.0);
+\fill (-2.5,0) circle (2pt);
+\draw (0,0) pic {memlocnull};
+\end{tikzpicture}
+\end{figure}
+
+Een NULL-pointer mag niet gebruikt worden om een variabele te benaderen. Dit wordt een \textsl{NULL-pointer dereference}\footnote{Zie \url{https://en.wikipedia.org/wiki/Null_pointer\#Null_Dereferencing}} genoemd en leidt in veel gevallen tot een crash van het programma.
+
+\begin{lstlisting}
+/* #define NULL ((void*)0) */
+
+char *p = NULL;
+*p = *p + 1;        /* Oops!!! */
+\end{lstlisting}
 
 \end{document}
