Changed lstlisting to lstinline

--- a/GESPRG_practicumdocument.tex
+++ b/GESPRG_practicumdocument.tex
@@ -2751,7 +2751,7 @@ De aangepaste tekst moet naar een bestand geschreven worden. Eventuele foutmeldi
 Met argumenten op de command-line wordt het volgende bedoeld:
 
 \begin{itemize}
-	\item Open een command-box (Windows: Windowstoets-R en type \lstlisting[language=,literate=]|cmd.exe|, OS-X: start terminal; Linux: start terminal).
+\item Open een command-box (Windows: Windowstoets-R en type \lstinline[language=,literate=]|cmd.exe|, OS-X: start terminal; Linux: start terminal).
 \item Navigeer naar de map waar de \textsl{executable} (= uitvoerbaar programma) staat. Bij Code:Blocks iets van \lstinline|C:\Users\...\Debug\bin|. Bij Linux/Mac: effe uitzoeken.
 \item Start de executable met \lstinline[language=,literate=]|naamvanexecutable.exe filename1.txt filename2.txt <enter>| (of zoveel argumenten als noodzakelijk).
 \item Het programma start nu met de twee argumenten.
